recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:2: error: '<-' expected but ')' found.
for(k<4 ){
        ^FourSquare:12: error: illegal start of simple expression
} 
^