recursion.logo.square.FourSquare.scala.code
override def run() {
for(k<4 ){
  droite(k*90);
	avance(100);
  droite(90);
  avance(100);
  droite(90);
  avance(100);  
  droite(90);
  avance(100);
}
}